--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "npm": "~1.3.2"
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "dotenv": "^1.2.0",
-    "express": "~4.9.0",
+    "express": "^4.16.3",
     "express-jwt": "^3.0.1",
     "jade": "~1.6.0",
     "jsonwebtoken": "^5.0.2",
-    "mongoose": "~3.8.20",
+    "mongoose": "^5.3.2",
     "morgan": "~1.3.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
